Add opt service
