# src/api/dtos/user_dto.go
@@ -1,0 +1,5 @@
+package dtos
+
+type GetOtpRequest struct {
+	MobileNumber string `json:"mobileNumber" binding:"required,mobile,min=11,max=11"`
+}
